--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
 <body>
     <!-- #ROOT VUE -->
     <div id="root">
-
-
+        <div class="container">
+            <ul>
+            </ul>
+        </div>
     </div>
     
     <!-- Script  -->
