genera 10 email e le pusha nel array, con Vue scrive l'array nel dom, non aspetta che vengano generate tutte le email

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
     <!-- #ROOT VUE -->
     <div id="root">
         <div class="container">
-            <ul>
+            <ul v-if="mails.length > 0">
+                <li v-for="mail in mails">
+                    {{mail}}
+                </li>
             </ul>
         </div>
     </div>
